--- a/src/view/contato.html
+++ b/src/view/contato.html
@@ -10,7 +10,7 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/global.css">
   <link rel="stylesheet" href="../styles/contato.css">
-  <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.css">
+  <script src="https://kit.fontawesome.com/89b2ef1546.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
